# H-Neurons

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  ROADMAP.md  code2prompt.sh  docs-housekeeping-review.md  initial-setup-opus-notes.md  original-paper-markdown-converted.md  pyproject.toml  requirements.txt
data/: gemma3_4b_TriviaQA_consistency_samples.jsonl  gemma3_4b_answer_tokens.jsonl  gemma3_4b_pipeline_report.md  gemma3_4b_train_qids.json  mistral24b_TriviaQA_consistency_samples.jsonl  mistral24b_answer_tokens.jsonl  mistral24b_answer_tokens_llm.jsonl  mistral24b_pipeline_report.md
docs/: act3-sprint.md  bluedot-rapid-grant-2026.md  ci_manifest.json  extensions-ideas.md  gh200-research-log-2026-03-15.md  gpt-act3-deep-research-report.md  known-issues.md  literature-review-act3.md  measurement-blueprint.md  pipeline-notes.md  project-structure.md  replication-notes.md  sae_investigation_plan.md  swing-characterization-analysis.md  throughput-assessment.md  tier2-batch-size-adjustments.md  tooling-assessment.md
notes/: 2026-04-11-strategic-assessment.md  AGENTS.md  V2-critique-of-mentor-review-strategic.md  act3-sprint.md  measurement-blueprint.md  mentor-review-strategic.md  optimise-intervention-ac3.md  research-log.md  runs_to_analyse.md  tier2-batch-size-adjustments.md
paper/: paper-outline-v1.md  revised_flagship_outline-v2.md
papers/: 2402.10260.md  2404.06407.md  Adaptive Activation Steering: A Tuning-Free LLM Truthfulness Improvement Method for Diverse Hallucinati2406.00034v2.md  Gemma3-technical-report-2503.19786v1.md  INDEX.md  (+31 more)
(+1270 files in other folders)
