[project]
name = "02-h-neurons"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "openai>=2.28.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "sae-lens>=6.39.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "wandb>=0.24.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "N",    # pep8-naming conventions
]

[tool.ruff.lint.pep8-naming]
# Allow ML-conventional uppercase names (scikit-learn X, C, etc.)
ignore-names = [
    "X", "X_*",
    "C", "C_*",
]

[tool.ty.environment]
python = "../.venv"
extra-paths = ["scripts", "scripts/infra"]

[tool.ty.src]
include = ["scripts", "tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "scalene>=2.1.4",
]
